syntax = "proto3";

option csharp_namespace = "Antares.Service.History.GrpcContract.Common";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package antares.service.history.common;

enum PaginationOrder {
  ASC = 0;
  DESC = 1;
}

message PaginatedInt32Response {
  int32 offset = 1;

  int32 count = 2;
}

message PaginationInt32 {

  int32 offset = 2;

  int32 limit = 3;
}

message ErrorResponseBody {

  enum ErrorCode {
    UNKNOWN = 0;
    INVALID_PARAMETERS = 1;
    NOT_AUTHORIZED = 2;
    NOT_FOUND = 3;
    BROKER_ACCOUNT_INACTIVE = 4;
  }

  ErrorCode error_code = 1;
  string error_message = 2;
}

message BigDecimal {
  string value = 1;
}

message HistoryResponseItem {
  string id = 1;

  string wallet_id = 2;

  google.protobuf.Timestamp timestamp = 3;

  HistoryType type = 4;

  oneof body {
    CashInModel cash_in = 5;
    CashOutModel cash_out = 6;
    TradeModel trade = 7;
    OrderEventModel order_event = 8;
  }
}

message TradeModel {
  string asset_pair_id = 1;

  antares.service.history.common.BigDecimal base_volume = 2;

  string base_asset_id = 3;

  string quoting_asset_id = 4;

  antares.service.history.common.BigDecimal quoting_volume = 5;

  antares.service.history.common.BigDecimal price = 6;

  antares.service.history.common.BigDecimal fee_size = 7;

  google.protobuf.StringValue fee_asset_id = 8;

  int32 index = 9;

  TradeRole Role = 10;

  string order_id = 11;
}

message CashInModel {
  antares.service.history.common.BigDecimal volume = 1;

  string asset_id = 2;

  google.protobuf.StringValue blockchain_hash = 3;

  antares.service.history.common.BigDecimal fee_size = 4;
}

message CashOutModel {
  antares.service.history.common.BigDecimal volume = 1;

  string asset_id = 2;

  google.protobuf.StringValue blockchain_hash = 3;

  antares.service.history.common.BigDecimal fee_size = 4;
}


message OrderEventModel {
  antares.service.history.common.BigDecimal volume = 1;

  string asset_pair_id = 2;

  string order_id = 3;

  antares.service.history.common.BigDecimal price = 4;

  OrderStatus status = 5;
}

enum TradeRole
{
  UNKNOWN = 0;
  MAKER = 1;
  TAKER = 2;
}

enum HistoryType {
  CASH_IN = 0;
  CASH_OUT = 2;
  TRADE = 3;
  ORDER_EVENT = 4;
}

enum OrderStatus {
  UNKNOWN_ORDER = 0;
  PLACED = 1;
  PARTIALLY_MATCHED = 2;
  MATCHED = 3;
  PENDING = 4;
  CANCELLED = 5;
  REPLACED = 6;
  REJECTED = 7;
}

enum TradeType
{
  BUY = 0;
  SELL = 1;
  NONE = 2; 
}