syntax = "proto3";

option csharp_namespace = "Antares.Service.History.GrpcContract.Trades";

import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package antares.service.history.trades;

service Trades {
  rpc GetTrades (GetTradesRequest) returns (GetTradesResponse);

  rpc GetTradesByOrderId (GetTradesByOrderIdRequest) returns (GetTradesResponse);

  rpc GetTradesByDates (GetTradesByDatesRequest) returns (GetTradesResponse);
}

message GetTradesByOrderIdRequest {
  string wallet_id = 1;
  string id = 2;
}

message GetTradesRequest {
  string wallet_id = 1;
  repeated antares.service.history.common.HistoryType type = 2;
  google.protobuf.StringValue asset_id = 3;
  google.protobuf.StringValue asset_pair_id = 4;
  antares.service.history.common.PaginationInt32 pagination = 5;
  google.protobuf.Timestamp from = 6;
  google.protobuf.Timestamp to = 7;
  antares.service.history.common.TradeType trade_type = 8;
}

message GetTradesByDatesRequest {
  antares.service.history.common.PaginationInt32 pagination = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
}

message GetHistoryItemResponse {
  antares.service.history.common.HistoryResponseItem item = 1;
}

message GetTradesResponse {
  repeated antares.service.history.common.HistoryResponseItem items = 1;

  antares.service.history.common.PaginatedInt32Response pagination = 2;
}
